--- a/GradeSpeeed/GradeBook.properties
+++ b/GradeSpeeed/GradeBook.properties
@@ -1,2 +1,2 @@
-#Sun Nov 28 20:05:06 CST 2021
-
+#Sun Nov 28 22:08:04 CST 2021
+pol999=/Student Name-poly/Labs-10, 20/Quizzes-11/Project-14/Midterm-12/Final Exam-13/
